[package]
name = "titanic"
version = "0.1.0"
authors = ["49nord GmbH <hello@49nord.de>", "Carl Scherer <carl.scherer@49nord.de>"]
description = "Unsinkable parser for the GGA sentence of the NMEA 0183 protocol (parses GPS positions)."
repository = "https://github.com/49nord/titanic-rs"
license = "MIT"
readme = "README.md"
keywords = ["nmea", "0183", "gps", "parser", "nmea0183"]
exclude = ["fuzz/*"]

[dependencies]
quick-error = "1.2.2"
arrayvec = "0.4.7"
chrono = "0.4.6"

[dev-dependencies]
assert_matches = "1.3.0"
